Changes for 1.7.5

 - [ZBX-1174] fixed "Add host" operation in "Discovery" module, ports are now never updated when the host already exists (Dmitry)
 - [ZBX-1357] updated French translation. Thanks to alixen (Richlv)
 - [1306] fixed showing triggers that recently changed state as errors in dashboard (Vedmak)
 - [ZBX-1030] fixed security vulnerability in server allowing remote unauthenticated users to execute scripts. Thanks to Nicob (Sasha)
 - [ZBX-1437] fixed errors in events screen (Vedmak)
 - [ZBX-1433] fixed error viewing event (Vedmak)
 - [ZBX-954] improve wording on frontend buttons and elsewhere (Richlv)
 - [ZBX-1369] make more strings translatable (Richlv)
 - [ZBX-1407] fixed misc issues with popup (Aly)
 - [ZBX-1265] fixed undefined variable on user delete through API (Aly)
 - [ZBX-1419] fix MySQL upgrade patch (Richlv)
 - [ZBX-1350] drop and recreate help_items table upon upgrade (Richlv)
 - [ZBX-1418] fixed errors in frontend install wizard (Aly)
 - [ZBX-1316] changed to standard trigger edit form (Aly)
 - [ZBX-1417] fixed permission check in configuration of actions (Aly)
 - [ZBX-1290] fixed maintenance permission check (Aly)

Changes for 1.7.4

 - [ZBX-1400] updated patches for DB (Aly)
 - [ZBX-1415] fixed problem displaying bar graphs (Aly)
 - [DEV-440] fixed vfs.fs.size[] to return data in bytes for all OS (Sasha)
 - [DEV-439] fixed vfs.fs.size[] to return available disk space for normal users (Sasha)
 - [ZBX-1246] fixed processing of results from items checks when character data must be interpreted like numeric data (Dmitry)
 - [ZBX-1408] fixed adding images for postgresql (Aly)
 - [ZBX-1410] fixed user profile update (Aly)
 - [ZBX-1371] shrinked API get results (Aly)
 - [ZBX-1411] fixed group and host selection in status of triggers (Aly)
 - [ZBX-1391] fixes for map permission checks (Aly)
 - [ZBX-1412] fixed graphs in web scenarios (Aly)
 - [ZBX-790] added protection of using special characters in user parameters of Zabbix Agent (Sasha)